# algo

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  scanf_test.cpp  sumOf3.cpp  sumOf4  sumOf4.cpp  test.cpp
